--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,9 @@
-{ "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }] }
+{
+  "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }],
+  "redirects": [
+    {
+      "source": "/contact",
+      "destination": "http://portfolio-contact.us-east-1.elasticbeanstalk.com/inquiry/:splat"
+    }
+  ]
+}
