revising the connection

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "redirects": [
     {
       "source": "/contact",
-      "destination": "http://portfolio-contact.us-east-1.elasticbeanstalk.com/inquiry/:splat"
+      "destination": "http://portfolio-contact.us-east-1.elasticbeanstalk.com/contact/:splat"
     }
   ]
 }
