--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
-  "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }],
   "rewrites": [
     {
       "source": "/contact",
       "destination": "http://portfolio-contact.us-east-1.elasticbeanstalk.com/contact"
     }
-  ]
+  ],
+  "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }]
 }
