rolling back to the original form

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,3 @@
 {
-  "rewrites": [
-    {
-      "source": "/contact",
-      "destination": "http://portfolio-contact.us-east-1.elasticbeanstalk.com/contact"
-    }
-  ]
+  "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }]
 }
